--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
