--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "duckduckgo-images-api": "^1.0.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^24.0.0",
     "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
