--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "homeapp",
+  "name": "homecloud",
   "version": "1.0.0",
-  "description": "A simple Node.js application to serve a 'Hello, World!' webpage",
+  "description": "Personal file manager and cloud clipboard for your home network",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-frontend": "cd frontend && npm run build",
     "lint": "eslint app/"
   },
-  "keywords": [
-    "nodejs",
-    "express",
-    "hello-world",
-    "web-app"
-  ],
-  "author": "Your Name <youremail@example.com>",
+  "author": "",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "duckduckgo-images-api": "^1.0.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
-    "puppeteer": "^24.0.0",
     "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
+    "esbuild": "^0.27.3",
     "eslint": "^8.52.0",
     "nodemon": "^2.0.22"
   },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+  "pkg": {
+    "scripts": [
+      "app/**/*.js",
+      "server.js"
+    ],
+    "assets": [
+      "frontend/build/**/*",
+      ".env"
+    ],
+    "targets": [
+      "node20-macos-arm64"
+    ],
+    "outputPath": "dist"
   }
 }
